--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "static.serve": "webpack -w --hot --inline",
+    "serve": "webpack -w --hot --inline",
     "build-dev": "webpack --config ./webpack.config",
     "build-prod": "NODE_ENV=prod webpack --config ./webpack.config",
-    "watch": "webpack -w",
+    "watch": "webpack -w --config ./webpack.config",
     "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.4.1",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2016": "^6.11.3",
@@ -21,6 +22,7 @@
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^3.0.2",
+    "precss": "^1.4.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
