--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "autoprefixer": "^6.4.1",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-es2016": "^6.11.3",
     "babel-preset-react": "^6.11.1",
@@ -30,6 +32,7 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "flux": "^2.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   }
